--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
+  color: white;
+  background: black;
 }
 
 a {
